# vrinsight-cdu-ii-msfs-driver

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  inno.iss  keymap.yaml  keymap_example.yaml  startup_sequence.lst
.github/workflows/: release.yml
lib/mobiflight-event-module/modules/: events.txt
src/: cdu.rs  keymap.rs  main.rs  msfs.rs  serial.rs
