[package]
name = "vrinsight-cdu-ii-msfs-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.2.0"
# msfs = "0.1.0"
simconnect = "0.1.3"

[target.wasm32-wasi]
rustflags = [
  "-Clink-arg=--export-table",
  "-Clink-arg=--export=malloc",
  "-Clink-arg=--export=free",
]
