[package]
name = "vrinsight-cdu-ii-msfs-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.2.0"
simconnect = "0.1.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.9.13"

[target.wasm32-wasi]
rustflags = [
  "-Clink-arg=--export-table",
  "-Clink-arg=--export=malloc",
  "-Clink-arg=--export=free",
]
